[package]
name = "web_img_server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.69"
bytes = "1.4.0"
futures-core = "0.3.26"
mime = "0.3.16"
photon-rs = "0.3.2"
prost = "0.11.8"
reqwest = "0.11.14"
pin-project = "1"

[build-dependencies]
prost-build = "0.11.8"
